--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "quiz_app"]
 	path = quiz_app
 	url = https://github.com/iambelmin/quiz_app
+[submodule "personal_expenses_app"]
+	path = personal_expenses_app
+	url = git@github.com:iambelmin/personal_expenses_app.git
